test link done, finish emailer, design

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,10 +18,10 @@
 @import "materialize";
 
 body{
-	font-family: 'Old Standard TT', serif;
-	background-color: black;
+	font-family: 'Varela Round', sans-serif;
+	background-color:  #3cbceb;
 }
 
 a{
-	font-family: 'Old Standard TT', serif;
+	font-family: 'Varela Round', sans-serif;
 }
