--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,11 +1,11 @@
 <div class="row" align="center" style="margin-top: 15%;">
-	<h4 style="color:white;">Contact Us!</h4>
+	<h4 style="color:white;">Book Your Appointment Now!</h4>
 	
 	<div align="center">
 		<div class="row">
 	        <ul >
 	 
-	          <li><a href="https://instagram.com/expgrowthcapital?utm_source=ig_profile_share&igshid=1381lcsdm2qnf" class="waves-effect waves-light btn social instagram" style="background-color: #dbc361; color: black;"><i class="fa fa-instagram"></i> Check Out Our Instagram!</a></li>
+	          <li><a href="#" class="waves-effect waves-light btn social instagram" style="background-color: white; color: black;"><i class="fa fa-instagram"></i> Check Out Our Instagram!</a></li>
 
 	        </ul>
 	      </div>
