--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -51,7 +51,7 @@
 
 
                                 <div align="center" class="row" style="margin-top: 3%;">
-                                  <%= form.submit "Send", class: "btn waves-effect waves-light", :style => "background-color: #E8D124; color: white; margin-top: 10px; width:23%;" %>
+                                  <%= form.submit "Send", class: "btn waves-effect waves-light", :style => "background-color: white; color: black; margin-top: 10px; width:23%;" %>
                                 </div>
                       </div>
 
