--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>B.T.T.W</title>
+    <title>Dream Think Achieve Cleaning</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= favicon_link_tag asset_path('logo.png'), :rel => 'icon', :type =>  'image/png' %>
-    <link href="https://fonts.googleapis.com/css?family=Alice|Cormorant+Garamond|Old+Standard+TT|Rajdhani" rel="stylesheet">
+    <!-- <#%= favicon_link_tag asset_path('logo.png'), :rel => 'icon', :type =>  'image/png' %> -->
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
@@ -32,7 +32,7 @@
 
       /* Handle on hover */
       ::-webkit-scrollbar-thumb:hover {
-          background: #dbc361; 
+          background: #3cbceb; 
       }
 
        /* Fade in */
@@ -64,12 +64,12 @@
 
   <body>
 
-    <header style="background-color: black">
+    <header style="background-color:  #3cbceb">
 
           <nav id="nav" style="margin-bottom: 5%; background-color: white" data-aos="fade-down" data-aos-duration="2500">
 
                 <div class="nav-wrapper">
-                  <a href="#!" class="brand-logo" style="background-color:rgba(0, 0, 0, 0.0);"><%= image_tag asset_path('logo.png'), :rel => 'icon', :type =>  'image/png', :style => 'width: 50px; height: auto; margin: 11%;' %></a>
+                <!--   <a href="#!" class="brand-logo" style="background-color:rgba(0, 0, 0, 0.0);"><#%= image_tag asset_path('logo.png'), :rel => 'icon', :type =>  'image/png', :style => 'width: 50px; height: auto; margin: 11%;' %></a> -->
                   <a href="/" data="no-turbolink" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons" style="width: 150%; height: auto;">menu</i></a>
                   <ul class="right hide-on-med-and-down" style="margin-top: 1.5%">
 
