--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,50 +1,6 @@
 <div class="container">
 
-	<div class="row" style="margin-top: 15%" data-aos="flip-up" data-aos-duration="2000">
-		<div class="col s8" align="left">
-			<div class="col s2">
-				<i class="medium material-icons" style="color: #dbc361">tap_and_play</i>
-			</div>
-			<div class="col s6">
-				
-				<h5 style="color: white">Forex Signals</h5>
-				
-				<p style="margin-top: 5%; color: white">
-					Too busy to be looking at charts all day? Let us do the analysis while you just wait for the alert. Join our Forex Signals group chat on telegram where our expert traders provide you with three to five signals per day. Our signals have a 90% success rate. We provide you with point of entry, recommended stop loss, and a take profit. Our signals telegram also serves as a traders chat room in which all members and admin can discuss open trades and ideas together. 
-				</p>
-			</div>
-		</div>
-	</div>
-	<div class="row" style="margin-top: 5%" data-aos="flip-down" data-aos-duration="2000">
-		<div class="col s6 push-s7" align="right">
-			<div class="col s8">
-				<h5 style="color: white">Live Trading Sessions </h5>
-				<p style="margin-top: 5%; color: white">
-					Here at Exponential Growth Capital, we host Live Trading Sessions Monday-Friday from 8:30AM EST to 11:30AM EST via ZOOM video and voice chat. When you sign up for our Live Sessions, you will get an invite to join the ZOOM call at 8:30 every morning and get to listen in to our executive trading team and students call out trades for you to take. We average about 100 pips per session with little to no drawdown in trades executed.
-				</p>
-			</div>
-			<div class="col s2">
-				<i class="medium material-icons" style="color: #dbc361">trending_up</i>
-			</div>
-			
-		</div>
-	</div>
-	<div class="row" style="margin-top: 5%; margin-bottom: 15%" align="left" data-aos="flip-up" data-aos-duration="3000">
-		<div class="col s2">
-			<i class="medium material-icons" style="color: #dbc361">group</i>
-		</div>
-		<div class="col s6">
-			<div>
-				<h5 style="color: white">Mentorship</h5>
-				
-				<p style="margin-top: 5%; color: white">
-					For those of you interested in becoming an expert trader to learn everything about the foreign exchange market, including how our team of experts and students are able to bring in thousands of dollars every week, we offer a mentorship program. With our mentorship program, you will be granted access to our signal chat, live trading sessions, and will receive one on one personalized training by one of our executive traders. By signing up for the mentorship, you will receive bi-weekly individualized calls with an executive team member. Additionally, we host bi-weekly webinars with all mentorship students. During these webinars, we review the previous trading week, discuss upcoming trades, fundamental analysis, market structure, in addition to any questions raised during the session. We demonstrate how to trade through all market conditions, including major news events that may impact trades, and impart our knowledge on confirmations that we use to look for trade setups, guiding you on becoming a consistently profitable trader. Even after you are consistently profitable, the Exponential Growth community is here for you! 
-				</p>				
-			</div>
-			
-		</div>
-	</div>
-	   <div class="row" style="margin-bottom: 25%;">
-	    <div class="col s12" align="center"><%= link_to "Get In Touch Now!!!", new_contact_path, class: "btn waves-effect waves-light pulse", style: "background-color: #dbc361; color: black;" %></div>
+	  <div class="row" style="margin-bottom: 25%;">
+	    <div class="col s12" align="center"><%= link_to "Get In Touch Now!!!", new_contact_path, class: "btn waves-effect waves-light pulse", style: "background-color: white; color: black;" %></div>
 	  </div>
 </div>
