--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -7,11 +7,7 @@
 		</div>
 		<div class="row">
 			<div class="col s12">
-				<p>Caution: Trading involves the possibility of financial loss. Only trade with money that you are prepared to lose, you must recognize that for factors outside your control, you may lose all of the money in your trading account. Many forex brokers also hold you liable for losses that exceed your trading capital. So you may stand to lose more money than is in your account.
-
-				Our trading services do not guarantee returns nor are they recommendations for trading or investments. Our trading services provide trades and strategy that may or may not have been used or executed by us and any decision to trade based on our information is the sole responsibility of you.
-
-				Exponential Growth Capital does not take responsibility for any loss incurred as a result of our trading services, mirror trade packages or any communication we have with you. By signing up as a member you acknowledge that we are not providing financial advice and that you are making the decision to copy our trades on your own account. We have no knowledge on the level of money you are trading with or the level of risk you are taking with each trade. You must make your own financial decisions, we take no responsibility for money made or lost as a result of our copy trade packages or advice on forex related services. 
+				<p>Lorem ipsum dolor amet bespoke pok pok celiac jianbing, live-edge austin microdosing skateboard blog food truck adaptogen flexitarian enamel pin banh mi. Pinterest quinoa raclette, health goth la croix intelligentsia hell of craft beer tote bag copper mug wayfarers hot chicken man bun swag hashtag. Meh hella cloud bread small batch forage succulents ethical tattooed banh mi jianbing shoreditch tumblr. Kogi tumblr taxidermy, retro raclette chicharrones YOLO before they sold out jean shorts skateboard four loko heirloom hell of. Craft beer selvage poke etsy photo booth.
 				</p>
 			</div>
 		</div>
