--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
-	<div class="row" align="center" style="margin-top: 5%; margin-bottom: 25%;" data-aos="fade-up" data-aos-duration="2500">
+	<div class="row" align="center" data-aos="fade-up" data-aos-duration="2500">
 		<div class="col s12">
 			<div style="opacity: 0.9">
-				<!-- <#%= image_tag asset_path('logo.png'), :rel => 'icon', :type =>  'image/png', :style => 'width: 40%; height: auto;' %> -->
+				<%= image_tag asset_path('Logo-3-3.jpg'), :rel => 'icon', :type =>  'image/png', :style => 'width: 60%; height: auto; margin-top: 20%;' %>
 			</div>
 		</div>
 	</div>
