--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,13 +26,13 @@
        
       /* Handle */
       ::-webkit-scrollbar-thumb {
-          background: darkgrey; 
-          border-radius: 10px;
+          background: lightgrey; 
+          /*border-radius: 10px;*/
       }
 
       /* Handle on hover */
       ::-webkit-scrollbar-thumb:hover {
-          background: #3cbceb; 
+          background: white; 
       }
 
        /* Fade in */
