--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,9 +17,11 @@
  */
 @import "materialize";
 
+
 body{
 	font-family: 'Varela Round', sans-serif;
 	background-color:  #3cbceb;
+	color: white;
 }
 
 a{
