--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,27 +1,11 @@
-<div class="row" align="center" style="margin-top: 15%;">
-	<h4 style="color:white;">Book Your Appointment Now!</h4>
-	
-	<div align="center">
-		<div class="row">
-	        <ul >
-	 
-	          <li><a href="#" class="waves-effect waves-light btn social instagram" style="background-color: white; color: black;"><i class="fa fa-instagram"></i> Check Out Our Instagram!</a></li>
-
-	        </ul>
-	      </div>
-	 </div>
-
-	
-	<div style="margin-top: 2%; margin-bottom: 60%">
-		<%= render 'form', contact: @contact %>
-	</div>
-
-
-	
-
-
-
-
+<div class="container">
+	<div class="row">
+		<div class="col s12 center-align" style="color: white; margin-bottom: 10%; margin-top: 5%">
+			<h3>Book Your Appointment!!!</h3>
+		</div>
+	</div>	
+	<%= render 'form', contact: @contact %>
 </div>
+
 
 
