--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script>
          $(document).ready(function() {
-            $('select').formSelect();
+            $('select').material_select();
          });
     </script>
 
