--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-		<div class="col s12 center-align" style="color: white; margin-bottom: 10%; margin-top: 5%">
+		<div class="col s12 center-align" style="color: white; margin-bottom: 15%; margin-top: 10%" data-aos="fade" data-aos-duration="2500">
 			<h3>Book Your Appointment!!!</h3>
 		</div>
 	</div>	
