--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <script>
-         $(document).ready(function() {
-            $('select').material_select();
-         });
-    </script>
+
 
    <style>
       /* width */
@@ -72,6 +68,12 @@
     <%= render 'partials/nav' %>
   
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+      <script>
+         $(document).ready(function(){
+            $('select').formSelect();
+          });
+      </script>
 
       
   
