--- a/app/assets/stylesheets/contacts.scss
+++ b/app/assets/stylesheets/contacts.scss
@@ -1,11 +1,14 @@
 // Place all the styles related to the Contacts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+input[type=range]{
+  border-color: #3cbceb !important;
+  
+}
 .slide {
   -webkit-appearance: none;
   width: 100%;
-  height: 15px;
-  border-radius: 5px;   
+  height: 50px;   
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
@@ -16,8 +19,8 @@
 .slide::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 25px;
-  height: 25px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%; 
   background: #4CAF50;
   cursor: pointer;
