--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -66,7 +66,7 @@
             <div class="col s7">
                 <div class=" row center-align" style="margin-bottom: 10%; padding-bottom: 5%" data-aos="fade-up" data-aos-duration="2500">
                     
-                    <div class="col s2" style="margin-right: 5">
+                    <div class="col s2" style="margin-right: 10%">
                        <h5>
                         Beds:
                       </h5> 
@@ -79,7 +79,7 @@
                     
                 </div>
                 <div class=" row center-align" style="margin-bottom: 10%; padding-bottom: 5%" data-aos="fade-up" data-aos-duration="2500">
-                  <div class="col s2" style="margin-right: 5">
+                  <div class="col s2" style="margin-right: 10%">
                     <h5>
                       Baths:
                     </h5>
@@ -91,7 +91,7 @@
                     
                 </div>
                 <div class=" row center-align" style="margin-bottom: 10%; padding-bottom: 5%" data-aos="fade-up" data-aos-duration="2500">
-                  <div class="col s2" style="margin-right: 5">
+                  <div class="col s2" style="margin-right: 10%">
                     <h5>
                       Square Feet:
                     </h5>
