about done, added phone to contact

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,7 +19,7 @@
 
 
 body{
-	font-family: 'Varela Round', sans-serif;
+	font-family: 'Signika Negative', sans-serif;
 	background-color:  #3cbceb;
 	color: white;
 }
