--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,51 @@
 <div class="container">
 
-	  <div class="row" style="margin-bottom: 25%;">
-	    <div class="col s12" align="center"><%= link_to "Get In Touch Now!!!", new_contact_path, class: "btn waves-effect waves-light pulse", style: "background-color: white; color: black;" %></div>
-	  </div>
+	<div class="row" align="center" data-aos="fade-up" data-aos-duration="2500">
+		<div class="col s12">
+			<div style="opacity: 0.9">
+				<%= image_tag asset_path('Logo-3-3.jpg'), :rel => 'icon', :type =>  'image/png', :style => 'width: 60%; height: auto; margin-top: 20%;' %>
+			</div>
+		</div>
+	</div>
+
+	<div class="row" style="margin-top: 25%">
+
+		<div class="col s6 center-align" style="color: white;" data-aos="fade-right" data-aos-duration="2500">
+			<i class="material-icons" style="font-size: 75px; height: auto;">home</i>
+			<h4>Residential</h4>
+			<div style="padding: 5%;">
+				<p>We've got you covered! Homes, Condos, Apartments cleaned with care. Bedrooms, Living-rooms, and restrooms; Dusted, swept, and polished to perfection. We strive to make your living area spotless. Every second is precious, how you spend your time is important, our goal is to free up time to make every moment priceless. </p>
+			</div>
+		</div>
+
+		<div class="col s6 center-align" style="color: white;" data-aos="fade-left" data-aos-duration="2500">
+			<i class="material-icons" style="font-size: 75px; height: auto;">business</i>
+			<h4>Commercial</h4>
+			<div style="padding: 5%;">
+				<p>As professionals we all know organization, and a clean work area is a key to a successful venture. Let our team take the stress off of your hands and keep your business spotless. From common areas such as the Cafeteria, to the cubical, we aim to maximize your productivity. Own a Vacation Rental? Give us a call to ensure a immaculate quarters for you and/or your guests.</p>
+			</div>
+		</div>
+
+	</div>
+
+	<div class="row center-align" style="margin-top: 20%" data-aos="fade-up" data-aos-duration="2500">
+		<i class="material-icons" style="font-size: 75px; height: auto;">access_time</i>
+		<h4>Hours of operation</h4>
+		<div style="padding: 10%; margin-top: -5%" >
+			<p>We are open 7 days a week Sunday - Saturday, 8:00 am - 6:00 pm</p>
+			<p>All appointments MUST be scheduled a week prior. Also we require a 48 hour termination notice or a 10% fee will be charged, and appointment will be changed. </p>
+		</div>
+	</div>
+
+	<div class="row center-align" style="margin-top: 20%" data-aos="fade-up" data-aos-duration="2500">
+		<i class="material-icons" style="font-size: 75px; height: auto;">group</i>
+		<h4>Refer A Friend!!!</h4>
+		<div style="padding: 10%; margin-top: -5%" >
+			<h6>We offer awesome promotions for all our new customers! Refer your Friends and/or Family for a commission with our referral agreement program!!! Contact us today for details.</h6>
+		</div>
+	</div>
+
+    <div class="row" style="margin-bottom: 25%; margin-top: 15%">
+      <div class="col s12" align="center"><%= link_to "Get In Touch Now!!!", new_contact_path, class: "btn waves-effect waves-light pulse", style: "background-color: white; color: black;" %></div>
+    </div>
 </div>
