--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,8 +6,33 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="row" style="padding: 5%; margin-top: 25% " align="center" data-aos="fade-up" data-aos-duration="2500">
+		<div class="col s6">
+			<div style="opacity: 0.7">
+				<%= image_tag asset_path('clean-home.jpg'), :rel => 'icon', :type =>  'image/png', :style => 'width: 100%; height: auto; margin-top: 20%; opacity: 0.6;' %>
+			</div>
+		</div>
+		<div class="col s6 left-align">
+			<h3 style="margin-top: 50%">Residential Services</h3>
+			<h5>We've got you covered! Homes, Condos, Apartments cleaned with care.</h5>
+		</div>
+	</div>
+
+	<div class="row" style="padding: 5%; margin-top: 25% " align="center" data-aos="fade-up" data-aos-duration="2500">
+		<div class="col s6 right-align">
+			<h3 style="margin-top: 50%">Commercial Services</h3>
+			<h5>We've got you covered! Homes, Condos, Apartments cleaned with care.</h5>
+		</div>
+		<div class="col s6">
+			<div style="opacity: 0.7">
+				<%= image_tag asset_path('clean-office.jpg'), :rel => 'icon', :type =>  'image/png', :style => 'width: 100%; height: auto; margin-top: 20%; opacity: 0.6;' %>
+			</div>
+		</div>
+		
+	</div>
   
-  <div class="row" style="margin-bottom: 25%;" data-aos="fade-up" data-aos-duration="2000">
+  <div class="row" style="margin-bottom: 25%; margin-top: 15%" data-aos="fade-up" data-aos-duration="2000">
     <div class="col s12" align="center"><%= link_to "More Info...", pages_about_path, class: "btn waves-effect waves-light pulse", style: "background-color: white; color: black;" %></div>
   </div>
 
