--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -3,26 +3,23 @@
           <nav id="nav" style="margin-bottom: 5%; background-color: white" data-aos="fade-down" data-aos-duration="2500">
 
                 <div class="nav-wrapper">
-                  <a href="#!" class="brand-logo" style="background-color:rgba(0, 0, 0, 0.0);"><%= image_tag asset_path('Logo-3-1.jpg'), :rel => 'icon', :type =>  'image/png', :style => 'width: 150px; height: auto; margin: 11%;' %></a>
+                  <a href="/" class="brand-logo" style="background-color:rgba(0, 0, 0, 0.0);"><%= image_tag asset_path('Logo-3-1.jpg'), :rel => 'icon', :type =>  'image/png', :style => 'width: 150px; height: auto; margin: 11%;' %></a>
                   <a href="/" data="no-turbolink" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons" style="width: 150%; height: auto;">menu</i></a>
                   <ul class="right hide-on-med-and-down" style="margin-top: 1.5%">
 
-                          <li ><%=link_to 'Home', root_path, :style => "text-decoration: none; color: black;" %></li>
+                          
 
-                          <li ><%=link_to 'About', pages_about_path, :style => "text-decoration: none; color: black;" %></li>
+                          
 
-                          <li ><%=link_to 'Contact', new_contact_path, :style => "text-decoration: none; color: black;" %></li>
+                          <li ><%=link_to 'Book Us Now!!!', new_contact_path, :style => "text-decoration: none; color: black;" %></li>
 
                   </ul>
                 </div>
           
 
                 <ul class="sidenav" id="mobile-demo">
-                          <li ><%=link_to 'Home', root_path, :style => "text-decoration: none; color: black;" %></li> 
 
-                          <li ><%=link_to 'About', pages_about_path, :style => "text-decoration: none; color: black;" %></li>
-
-                          <li ><%=link_to 'Contact', new_contact_path, :style => "text-decoration: none; color: black;" %></li>
+                          <li ><%=link_to 'Book Us Now', new_contact_path, :style => "text-decoration: none; color: black;" %></li>
                 </ul>
 
           </nav>
