--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -53,7 +53,7 @@
                 Personal Information
               </h4>
               <h6>Let us know a little about you!</h6>
-              <p style="color: #4ba931"><i>*United States customers only</i></p>
+              <h6 style="color: #4ba931"><i>*United States customers only</i></h6>
             </div>
           </div>
 
@@ -65,7 +65,7 @@
               <h6>
                 Tell us about the space!
               </h6>
-              <p style="color: #4ba931"><i>*Additional fees may apply</i></p>
+              <h6 style="color: #4ba931"><i>*Additional fees may apply</i></h6>
             </div>
             <div class="col s7">
                 <div class=" row center-align" style="margin-bottom: 10%; padding-bottom: 5%" data-aos="fade-up" data-aos-duration="2500">
