--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
 			<i class="material-icons" style="font-size: 75px; height: auto;">home</i>
 			<h4>Residential</h4>
 			<div style="padding: 5%;">
-				<p>We've got you covered! Homes, Condos, Apartments cleaned with care. Bedrooms, Living-rooms, and restrooms; Dusted, swept, and polished to perfection. We strive to make your living area spotless. Every second is precious, how you spend your time is important, our goal is to free up time to make every moment priceless. </p>
+				<h6>We've got you covered! Homes, Condos, Apartments cleaned with care. Bedrooms, Living-rooms, and restrooms; Dusted, swept, and polished to perfection. We strive to make your living area spotless. Every second is precious, how you spend your time is important, our goal is to free up time to make every moment priceless. </h6>
 			</div>
 		</div>
 
@@ -21,7 +21,7 @@
 			<i class="material-icons" style="font-size: 75px; height: auto;">business</i>
 			<h4>Commercial</h4>
 			<div style="padding: 5%;">
-				<p>As professionals we all know organization, and a clean work area is a key to a successful venture. Let our team take the stress off of your hands and keep your business spotless. From common areas such as the Cafeteria, to the cubical, we aim to maximize your productivity. Own a Vacation Rental? Give us a call to ensure a immaculate quarters for you and/or your guests.</p>
+				<h6>As professionals we all know organization, and a clean work area is a key to a successful venture. Let our team take the stress off of your hands and keep your business spotless. From common areas such as the Cafeteria, to the cubical, we aim to maximize your productivity. Own a Vacation Rental? Give us a call to ensure a immaculate quarters for you and/or your guests.</h6>
 			</div>
 		</div>
 
@@ -31,8 +31,8 @@
 		<i class="material-icons" style="font-size: 75px; height: auto;">access_time</i>
 		<h4>Hours of operation</h4>
 		<div style="padding: 10%; margin-top: -5%" >
-			<p>We are open 7 days a week Sunday - Saturday, 8:00 am - 6:00 pm</p>
-			<p>All appointments MUST be scheduled a week prior. Also we require a 48 hour termination notice or a 10% fee will be charged, and appointment will be changed. </p>
+			<h6>We are open 7 days a week Sunday - Saturday, 8:00 am - 6:00 pm</h6>
+			<h6>All appointments MUST be scheduled a week prior. Also we require a 48 hour termination notice or a 10% fee will be charged, and appointment will be changed. </h6>
 		</div>
 	</div>
 
