--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,7 +32,7 @@
 		<h4>Hours of operation</h4>
 		<div style="padding: 10%; margin-top: -5%" >
 			<h6>We are open 7 days a week Sunday - Saturday, 8:00 am - 6:00 pm</h6>
-			<h6>All appointments MUST be scheduled a week prior. Also we require a 48 hour termination notice or a 10% fee will be charged, and appointment will be changed. </h6>
+			<h6>All appointments MUST be scheduled a week prior. We require a 48 hour termination notice or a 10% fee will be charged, and appointment will be changed. </h6>
 		</div>
 	</div>
 
