--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -7,8 +7,19 @@
 		</div>
 		<div class="row">
 			<div class="col s12">
-				<p>Lorem ipsum dolor amet bespoke pok pok celiac jianbing, live-edge austin microdosing skateboard blog food truck adaptogen flexitarian enamel pin banh mi. Pinterest quinoa raclette, health goth la croix intelligentsia hell of craft beer tote bag copper mug wayfarers hot chicken man bun swag hashtag. Meh hella cloud bread small batch forage succulents ethical tattooed banh mi jianbing shoreditch tumblr. Kogi tumblr taxidermy, retro raclette chicharrones YOLO before they sold out jean shorts skateboard four loko heirloom hell of. Craft beer selvage poke etsy photo booth.
-				</p>
+				<h4>Mission Statement</h4>
+				<h6>Mission statement: 
+To build a everlasting relationship with every customer we come into contact with, By giving EXCELLENT Services, constant EVOLUTION, deliver nothing but EXCELLENCE 
+vision. 
+Every second is precious how you spend your time is important. Our goal is to free up your time to make priceless.
+
+ </h6>
+ <h4>
+ Policy	
+ </h4>
+<h6>
+	All appointment must be scheduled a week prior 48 hour termination notice or a 10% fee appointment will be charged.
+</h6>
 			</div>
 		</div>
 </div>
